word-wrap css fix on search

--- a/edc-gear-starter/react-app/src/components/SearchResults/SearchRes.css
+++ b/edc-gear-starter/react-app/src/components/SearchResults/SearchRes.css
@@ -40,6 +40,9 @@
 
 #post-res {
     color: black;
+    border: 4px solid rebeccapurple;
+    word-wrap: break-word;
+    max-width: 520px ;
 }
 
 #no-res-h5 {
